03-pod-hardware-arch/.test/ns-test-arch-fallback.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-arch-fallback
