03-pod-hardware-arch/.test/ns-test-arch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-arch
  labels:
    policies.kyverno.io/default-arch: amd64
