03-pod-hardware-arch/.test/pod-basic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-basic
  namespace: test-arch
spec:
  containers:
    - name: nginx
      image: nginx
