03-pod-hardware-arch/.test/pod-disabled-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-disabled-namespace
  namespace: test-arch-disabled
spec:
  containers:
    - name: nginx
      image: nginx
