03-pod-hardware-arch/.test/pod-existing-arch-affinity-preferred.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing-arch-affinity-preferred
  namespace: test-arch
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          preference:
            matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                  - arm64
  containers:
    - name: nginx
      image: nginx
