03-pod-hardware-arch/.test/pod-existing-arch-affinity-required.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing-arch-affinity-required
  namespace: test-arch
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                  - amd64
  containers:
    - name: nginx
      image: nginx
