03-pod-hardware-arch/.test/pod-existing-arch-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing-arch-nodeselector
  namespace: test-arch
spec:
  nodeSelector:
    kubernetes.io/arch: s390x
  containers:
    - name: nginx
      image: nginx
