03-pod-hardware-arch/.test/pod-fallback.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-fallback
  namespace: test-arch-fallback
spec:
  containers:
    - name: nginx
      image: nginx
