03-pod-hardware-arch/.test/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-arch
spec:
  containers:
    - name: nginx
      image: nginx
