03-pod-hardware-arch/.test/pod-basic-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-basic
  namespace: test-arch
spec:
  nodeSelector:
    kubernetes.io/arch: amd64
  containers:
    - name: nginx
      image: nginx
