03-pod-hardware-arch/.test/pod-existing-nodeselector-no-arch-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing-nodeselector-no-arch
  namespace: test-arch
spec:
  nodeSelector:
    disktype: ssd
    kubernetes.io/arch: amd64
  containers:
    - name: nginx
      image: nginx
