03-pod-hardware-arch/.test/pod-fallback-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-fallback
  namespace: test-arch-fallback
spec:
  nodeSelector:
    kubernetes.io/arch: arm64
  containers:
    - name: nginx
      image: nginx
